--- a/index.html
+++ b/index.html
@@ -1,112 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Korvi - Tops</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Korvi Clothing - Featured Shirts</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: black;
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: 'Anton', sans-serif;
       margin: 0;
       padding: 0;
     }
     header {
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      border-bottom: 2px solid white;
+      text-align: center;
+      padding: 2rem 1rem 1rem;
+      border-bottom: 1px solid white;
     }
     header h1 {
-      font-size: 32px;
+      font-size: 3rem;
+      margin: 0;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin: 1rem 0;
     }
     nav a {
-      margin: 0 10px;
       color: white;
       text-decoration: none;
-      font-weight: bold;
+      border: 1px solid white;
+      padding: 0.5rem 1rem;
+      border-radius: 5px;
     }
-    .shirts {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 30px;
-      padding: 30px;
+    .products {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 2rem;
+      padding: 2rem;
     }
-    .shirt {
-      background-color: #111;
-      padding: 20px;
-      border-radius: 12px;
+    .product {
       text-align: center;
-      box-shadow: 0 0 10px #222;
+      border: 1px solid white;
+      padding: 1rem;
+      border-radius: 10px;
+      width: 90%;
+      max-width: 400px;
     }
-    .shirt img {
-      max-width: 100%;
-      border-radius: 8px;
-    }
-    .shirt h3 {
-      margin: 10px 0 5px;
-    }
-    .price {
-      margin-bottom: 10px;
-      font-weight: bold;
-    }
-    .shirt button {
-      background: black;
-      color: white;
-      border: 2px solid white;
-      padding: 8px;
-      margin: 5px 0;
+    .product img {
       width: 100%;
-      border-radius: 6px;
+      height: auto;
+      border-radius: 10px;
+    }
+    .buttons {
+      display: flex;
+      flex-direction: column;
+      gap: 0.5rem;
+      margin-top: 1rem;
+    }
+    .buttons button {
+      background-color: black;
+      color: white;
+      border: 1px solid white;
+      padding: 0.5rem;
+      border-radius: 5px;
       cursor: pointer;
     }
-    .cart-icon {
+    #cartButton {
       position: fixed;
       bottom: 20px;
       right: 20px;
       background: white;
       border-radius: 50%;
-      width: 50px;
-      height: 50px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      padding: 15px;
       cursor: pointer;
+      z-index: 100;
     }
-    .cart-icon img {
+    #cartButton img {
       width: 24px;
       height: 24px;
     }
-    #cart {
-      position: fixed;
-      bottom: 80px;
-      right: 20px;
-      background: #111;
-      padding: 15px;
-      border: 1px solid white;
-      border-radius: 10px;
+    #cartContainer {
       display: none;
+      position: fixed;
+      right: 20px;
+      bottom: 80px;
+      background-color: black;
       color: white;
+      border: 1px solid white;
+      padding: 1rem;
       max-width: 300px;
-    }
-    #cart h3 {
-      margin-top: 0;
+      z-index: 99;
     }
     .cart-item {
       display: flex;
       justify-content: space-between;
-      margin-bottom: 5px;
+      margin-bottom: 0.5rem;
     }
-    .remove-btn {
-      background: red;
-      border: none;
+    .cart-item button {
+      background-color: red;
       color: white;
+      border: none;
+      padding: 0.2rem 0.5rem;
       cursor: pointer;
-      font-size: 12px;
-      padding: 2px 6px;
-      border-radius: 4px;
+      border-radius: 3px;
     }
   </style>
 </head>
@@ -120,139 +123,113 @@
     </nav>
   </header>
 
-  <div class="shirts">
-    <div class="shirt">
-      <img src="drake.jpg" alt="Drake Tee">
-      <h3>Drake Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('Drake Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('Drake Tee', 2999)">Buy Now</button>
+  <section class="products">
+    <h2>Featured Shirts</h2>
+
+    <div class="product">
+      <img src="drake.jpg" alt="Drake Shirt">
+      <p>Drake Shirt - Rs.2999</p>
+      <div class="buttons">
+        <button onclick="buyNow('Drake Shirt', 2999)">Buy Now</button>
+        <button onclick="addToCart('Drake Shirt', 2999)">Add to Cart</button>
+      </div>
     </div>
-    <div class="shirt">
-      <img src="weeknd.jpg" alt="The Weeknd Tee">
-      <h3>The Weeknd Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('The Weeknd Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('The Weeknd Tee', 2999)">Buy Now</button>
+
+    <div class="product">
+      <img src="weeknd.jpg" alt="The Weeknd Shirt">
+      <p>The Weeknd Shirt - Rs.2999</p>
+      <div class="buttons">
+        <button onclick="buyNow('The Weeknd Shirt', 2999)">Buy Now</button>
+        <button onclick="addToCart('The Weeknd Shirt', 2999)">Add to Cart</button>
+      </div>
     </div>
-    <div class="shirt">
-      <img src="wrecked.jpg" alt="Wrecked Tee">
-      <h3>Wrecked Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('Wrecked Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('Wrecked Tee', 2999)">Buy Now</button>
+
+    <div class="product">
+      <img src="wrecked.jpg" alt="Wrecked Shirt">
+      <p>Wrecked Shirt - Rs.2999</p>
+      <div class="buttons">
+        <button onclick="buyNow('Wrecked Shirt', 2999)">Buy Now</button>
+        <button onclick="addToCart('Wrecked Shirt', 2999)">Add to Cart</button>
+      </div>
     </div>
-    <div class="shirt">
-      <img src="david.jpg" alt="David Tee">
-      <h3>David Tee</h3>
-      <p class="price">Rs 2999</p>
-      <button onclick="addToCart('David Tee', 2999)">Add to Cart</button>
-      <button onclick="checkout('David Tee', 2999)">Buy Now</button>
-    </div>
-    <div class="shirt">
-      <img src="buried.jpg" alt="Buried in Thoughts Tee">
-      <h3>Buried in Thoughts Tee</h3>
-      <p class="price">Rs 2499</p>
-      <button onclick="addToCart('Buried in Thoughts Tee', 2499)">Add to Cart</button>
-      <button onclick="checkout('Buried in Thoughts Tee', 2499)">Buy Now</button>
-    </div>
+  </section>
+
+  <div id="cartButton" onclick="toggleCart()">
+    <img src="cart-icon.png" alt="Cart">
   </div>
 
-  <div class="cart-icon" onclick="toggleCart()">
-    <img src="https://cdn-icons-png.flaticon.com/512/833/833314.png" alt="Cart">
-  </div>
-
-  <div id="cart">
+  <div id="cartContainer">
     <h3>Cart</h3>
-    <div id="cart-items"></div>
-    <p id="total"></p>
-    <button onclick="checkoutCart()">Purchase All</button>
+    <div id="cartItems"></div>
+    <button onclick="checkoutCart()">Complete Order</button>
   </div>
 
   <script>
     let cart = JSON.parse(localStorage.getItem('cart')) || [];
 
-    function saveCart() {
-      localStorage.setItem('cart', JSON.stringify(cart));
-    }
-
     function addToCart(name, price) {
       cart.push({ name, price });
-      saveCart();
-      alert(`${name} added to cart`);
-      renderCart();
+      localStorage.setItem('cart', JSON.stringify(cart));
+      alert(name + ' added to cart');
+      displayCart();
     }
 
     function toggleCart() {
-      const cartEl = document.getElementById('cart');
-      cartEl.style.display = cartEl.style.display === 'block' ? 'none' : 'block';
-      renderCart();
+      const container = document.getElementById('cartContainer');
+      container.style.display = container.style.display === 'block' ? 'none' : 'block';
+      displayCart();
     }
 
-    function renderCart() {
-      const cartItems = document.getElementById('cart-items');
-      cartItems.innerHTML = '';
-      let total = 0;
+    function displayCart() {
+      const container = document.getElementById('cartItems');
+      container.innerHTML = '';
       cart.forEach((item, index) => {
-        total += item.price;
-        cartItems.innerHTML += `
-          <div class="cart-item">
-            <span>${item.name} - Rs ${item.price}</span>
-            <button class="remove-btn" onclick="removeItem(${index})">X</button>
-          </div>`;
+        const div = document.createElement('div');
+        div.className = 'cart-item';
+        div.innerHTML = `${item.name} - Rs.${item.price} <button onclick="removeItem(${index})">X</button>`;
+        container.appendChild(div);
       });
-      document.getElementById('total').textContent = `Total: Rs ${total}`;
     }
 
     function removeItem(index) {
       cart.splice(index, 1);
-      saveCart();
-      renderCart();
+      localStorage.setItem('cart', JSON.stringify(cart));
+      displayCart();
     }
 
-    function checkout(name, price) {
-      const size = prompt('Select size: Small / Medium / Large');
+    function buyNow(name, price) {
+      const size = prompt('Select Size: Small, Medium, Large');
       if (!size) return;
-      const fullName = prompt('Enter your name:');
-      const address = prompt('Enter your address:');
-      const contact = prompt('Enter your contact number:');
-      const email = prompt('Enter your email:');
-      const message = `
-New COD Order:
-Product: ${name}
-Size: ${size}
-Name: ${fullName}
-Address: ${address}
-Contact: ${contact}
-Email: ${email}`;
-      alert("Order Placed!\n" + message);
-      // You can hook this message to an email system later
+      const customer = getCustomerDetails();
+      if (customer) sendOrder([{ name, price, size }], customer);
     }
 
     function checkoutCart() {
-      if (cart.length === 0) {
-        alert("Cart is empty!");
-        return;
-      }
-      const fullName = prompt('Enter your name:');
-      const address = prompt('Enter your address:');
-      const contact = prompt('Enter your contact number:');
-      const email = prompt('Enter your email:');
-      let orderDetails = cart.map(item => `${item.name} - Rs ${item.price}`).join('\n');
-      const message = `
-New COD Cart Order:
-${orderDetails}
-Name: ${fullName}
-Address: ${address}
-Contact: ${contact}
-Email: ${email}`;
-      alert("Order Placed!\n" + message);
-      cart = [];
-      saveCart();
-      renderCart();
+      const size = prompt('Select Size: Small, Medium, Large');
+      if (!size) return;
+      const customer = getCustomerDetails();
+      if (customer) sendOrder(cart.map(item => ({ ...item, size })), customer);
     }
 
-    renderCart();
+    function getCustomerDetails() {
+      const name = prompt('Enter your name');
+      const contact = prompt('Enter contact number');
+      const email = prompt('Enter email');
+      const address = prompt('Enter delivery address');
+      if (!name || !contact || !email || !address) return null;
+      return { name, contact, email, address };
+    }
+
+    function sendOrder(items, customer) {
+      const emailBody = `New Order\n\nItems:\n${items.map(i => `${i.name} - Rs.${i.price} - Size: ${i.size}`).join('\n')}\n\nCustomer Info:\nName: ${customer.name}\nContact: ${customer.contact}\nEmail: ${customer.email}\nAddress: ${customer.address}`;
+      window.open(`mailto:korviclothing@gmail.com?subject=New Order&body=${encodeURIComponent(emailBody)}`);
+      alert('Order placed!');
+      cart = [];
+      localStorage.removeItem('cart');
+      displayCart();
+    }
+
+    displayCart();
   </script>
 </body>
 </html>
